--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,13 @@
             <artifactId>spring-boot-starter-quartz</artifactId>
             <version>2.4.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+
+
 
 
 
